name:                running
version:             0.1.0.0
synopsis:            Time conversions
description:         Conversions between time in seconds and formatted string
homepage:            http://github.com/FranklinChen/running
bug-reports:         http://github.com/FranklinChen/running/issues
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2012 Franklin Chen
author:              Franklin Chen <franklinchen@franklinchen.com>
maintainer:          franklinchen@franklinchen.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  .gitignore,
                     README.md

source-repository head
  type:              git
  location:          http://github.com/FranklinChen/running.git

library
  build-depends:     base
  exposed-modules:   Time1

-- detailed-0.9 problem integrating with HUnit?
test-suite test
  type:              exitcode-stdio-1.0
  main-is:           test.hs
  build-depends:     base,
                     running,
                     test-framework,
                     HUnit,
                     test-framework-hunit,
                     QuickCheck,
                     test-framework-quickcheck2,
                     test-framework-th
